--- a/Index.html
+++ b/Index.html
@@ -3,72 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>داشبورد با آیکن‌ها</title>
+    <title>ریاست امور متعلمین و محصلین</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- اضافه کردن فونت B Nazanin -->
-    <style>
-        @font-face {
-            font-family: 'BNazanin';
-            src: url('path-to-font/BNazanin.woff2') format('woff2');
-        }
-        body {
-            font-family: 'BNazanin', sans-serif;
-            background-color: #f8f9fa;
-        }
-        .sidebar {
-            height: 100vh;
-            background-color: #343a40;
-            color: white;
-            padding-top: 20px;
-        }
-        .sidebar a {
-            color: white;
-            text-decoration: none;
-            padding: 15px;
-            display: block;
-        }
-        .sidebar a:hover {
-            background-color: #495057;
-        }
-        .content {
-            padding: 20px;
-        }
-        .card {
-            margin-bottom: 20px;
-        }
-        .sidebar i {
-            margin-right: 10px;
-        }
-        /* استایل برای تغییر سایز عکس */
-        .logo-img {
-            display: block;
-            margin: 0 auto;
-            width: 100px;
-            height: auto;
-        }
-        /* استایل فوتر */
-        footer {
-            background-color: #343a40;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="Css/dash.css" type="text/css">
 </head>
 <body dir="rtl">
     <div class="container-fluid">
         <div class="row">
             <!-- Sidebar -->
             <div class="col-md-2 sidebar">
-                <img src="path-to-your-logo/logo.png" alt="لوگوی داشبورد" class="logo-img">
-                <a href="#"><i class="bi bi-house-door"></i> صفحه اصلی</a>
-                <a href="#"><i class="bi bi-bar-chart"></i> گزارشات</a>
+                <img src="img/logo.png" alt="لوگوی داشبورد" class="logo-img">
+                <a href="#"><i class="bi bi-house-door"></i>کارمندان</a>
+                <a href="#"><i class="bi bi-bar-chart"></i></a>
                 <a href="#"><i class="bi bi-gear"></i> تنظیمات</a>
                 <a href="#"><i class="bi bi-person"></i> پروفایل</a>
                 <a href="#"><i class="bi bi-box-arrow-right"></i> خروج</a>
