--- a/Index.html
+++ b/Index.html
@@ -16,12 +16,30 @@
             <!-- Sidebar -->
             <div class="col-md-2 sidebar">
                 <img src="img/logo.png" alt="لوگوی داشبورد" class="logo-img">
-                <a href="#"><i class="bi bi-house-door"></i>کارمندان</a>
-                <a href="#"><i class="bi bi-bar-chart"></i></a>
+                
+                <!-- لینک با data-bs-toggle برای فعال سازی collapse -->
+                <a href="#demo" data-bs-toggle="collapse">
+                    <i class="bi bi-person"></i> کارمندان
+                </a>
+                <div id="demo" class="collapse">
+                    ثبت کارمند
+                </div>
+                <div id="demo" class="collapse">
+                    لیست کارمندان
+                </div>
+                <a href="#report" data-bs-toggle="collapse">
+                    <i class="bi bi-file-earmark-text"></i> گزارشات
+                </a>
+                <div id="report" class="collapse">
+                    ثبت گزارش
+                </div>
+                <div id="report" class="collapse">
+                    لیست گزارشات
+                </div>
                 <a href="#"><i class="bi bi-gear"></i> تنظیمات</a>
-                <a href="#"><i class="bi bi-person"></i> پروفایل</a>
                 <a href="#"><i class="bi bi-box-arrow-right"></i> خروج</a>
             </div>
+            
 
             <!-- Main Content -->
             <div class="col-md-10 content">
