--- a/Index.html
+++ b/Index.html
@@ -29,31 +29,37 @@
                         <li><a href="employee_list.html" class="d-block">لیست کارمندان</a></li>
                     </ul>
                 </div>
-                
 
-<!-- لینک گزارشات با data-bs-toggle برای فعال سازی collapse -->
-<a href="#reportsMenu" data-bs-toggle="collapse" aria-expanded="false" class="d-flex align-items-center">
-    <i class="bi bi-file-earmark-text"></i> گزارشات
-    <i class="bi bi-chevron-down ms-auto"></i>
-</a>
-<div id="reportsMenu" class="collapse">
-    <ul>
-        <li><a href="add_report.html" class="d-block">ثبت گزارش</a></li>
-        <li><a href="report_list.html" class="d-block">لیست گزارشات</a></li>
-    </ul>
-</div>
+                <!-- لینک گزارشات با data-bs-toggle برای فعال سازی collapse -->
+                <a href="#reportsMenu" data-bs-toggle="collapse" aria-expanded="false" class="d-flex align-items-center">
+                    <i class="bi bi-file-earmark-text"></i> گزارشات
+                    <i class="bi bi-chevron-down ms-auto"></i>
+                </a>
+                <div id="reportsMenu" class="collapse">
+                    <ul>
+                        <li><a href="add_report.html" class="d-block">ثبت گزارش</a></li>
+                        <li><a href="report_list.html" class="d-block">لیست گزارشات</a></li>
+                    </ul>
+                </div>
 
-
-                <!-- لینک‌های ثابت دیگر -->
-                <a href="settings.html"><i class="bi bi-gear"></i> تنظیمات</a>
                 <a href="logout.html"><i class="bi bi-box-arrow-right"></i> خروج</a>
             </div>
             
-
             <!-- Main Content -->
             <div class="col-md-10 content">
-                <h1>خوش آمدید!</h1>
-                <p>این داشبورد شامل اطلاعات کاربردی است.</p>
+                <div class="main--content">
+                    <div class="header--wrapper">
+                        <div class="header--title">
+                            <span>اصلی</span>
+                            <h2>داشبورد</h2>
+                        </div>
+                        <div class="user--info">
+                            <div class="search--box">
+                                <i class="bi bi-search"></i>
+                                <input type="search" placeholder="جستجو">
+                            </div>
+                        </div>
+                    </div>
 
                 <div class="row">
                     <!-- Card 1 -->
