--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
                 </a>
                 <div id="employeesMenu" class="collapse">
                     <ul>
-                        <li><a href="add_employee.html" class="d-block">ثبت کارمند</a></li>
+                        <li><a href="./Registration Form/index.html" class="d-block">ثبت کارمند</a></li>
                         <li><a href="employee_list.html" class="d-block">لیست کارمندان</a></li>
                     </ul>
                 </div>
